PROD-12-18-19/force-app/main/default/objects/Sidecar__c/fields/Sidecar_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Sidecar_Percentage__c</fullName>
    <description>Percentage of the Opportunity size that is allocated to the sidecar.</description>
    <inlineHelpText>Percentage of the Opportunity size that is allocated to the sidecar.</inlineHelpText>
    <label>Sidecar Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>