PROD-12-18-19/force-app/main/default/objects/Sidecar__c/fields/Sidecar_Size__c.field-meta.xml
<CustomField>
    <fullName>Sidecar_Size__c</fullName>
    <description>Amount of the sidecar, cannot exceed the amount of the parent opportunity</description>
    <inlineHelpText>Amount of the side car</inlineHelpText>
    <label>Sidecar Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>