PROD-12-18-19/force-app/main/default/objects/Sidecar__c/validationRules/Cannot_exceed_25_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_exceed_25_Percent</fullName>
    <active>false</active>
    <description>Side Car cannot be larger than 25% of the total commitment.</description>
    <errorConditionFormula>Sidecar_Percentage__c &gt;0.25 || Sidecar_Size__c / Total_Target_Capital__c &gt;0.25</errorConditionFormula>
    <errorMessage>Side Car cannot be larger than 25% of the total commitment.</errorMessage>
</ValidationRule>