PROD-12-18-19/force-app/main/default/objects/Sidecar__c/validationRules/Side_Car_Cannot_Exceed_Parent_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Side_Car_Cannot_Exceed_Parent_Opp</fullName>
    <active>false</active>
    <description>Side Car value must be less than Parent Opportunity.</description>
    <errorConditionFormula>Sidecar_Size__c &gt; Parent_Opportunity__r.Amount</errorConditionFormula>
    <errorMessage>Side Car value must be less than Parent Opportunity.</errorMessage>
</ValidationRule>